--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
@@ -39,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.0",
+    "@types/react-bootstrap": "^0.32.30",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14"
   }
